[package]
name = "blog"
version = "0.0.0"
authors = ["konojunya <junya.developer@gmail.com>"]
description = "blog system"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
regex = "1.3.9"
pulldown-cmark = "0.7.2"
handlebars = "3.3.0"
serde = {version = "1.0.114", features = ["derive"] }
chrono = "0.4.13"
